2003-10-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS configure configure.in backend/Makefile.in backend/dll.conf
	  backend/mustek_pp_ccd.c backend/mustek_pp_ccd.conf backend/mustek_pp_ccd.h
	  doc/Makefile.in doc/sane.man doc/sane-mustek_pp_ccd.man
	  doc/descriptions/mustek_pp_ccd.desc: Added back old mustek_pp
	  backend. That backend supports Mustek CCD scanners. The backend
	  was renamed to mustek_pp_ccd to avoid conflicts with the new
	  mustek_pp backend for CIS scanners. The code was taken from
	  sane-backends 1.0.9. This is only a temporary solution. The goal
	  is to incooperate CCD and CIS support into mustek_pp.
	* doc/sane-mustek_pp.man doc/descriptions/mustek_pp.desc: Added
	  links to the mustek_pp_ccd backend. Removed scanners supported by
	  mustek_pp_ccd.

2003-10-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Microtek ScanMaker
	  5900.
	* doc/descriptions/umax1220u.desc: Converted to new
	  format (bug #300155). Commented out unsupported UMAX Astra 2200U
	  to avoid confusion.
	* doc/Makefile.in: Cleanup. Removed install target for
	  mostang.com.
	* doc/descriptions/microtek2.desc: Converted to new
	  format (bug #300153). Commented out ScanMaker 9600XL (was
	  mentioned twice?).
	* doc/descriptions/hpsj5s.desc: Converted to new format (bug
	  #300151). Added comment about only gray mode.
	* doc/descriptions/fujitsu.desc: Converted to new format (bug
	  #300150).
	* doc/descriptions/canon630u.desc: Converted to new format (bug
	  #300148).
	
2003-10-03  Karl Heinz Kremer <khk@khk.net>

	* doc/descriptions/epson.desc: Changed "status" information

2003-10-02  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek_pp* backend/plustek-usb*: fixed some OS/2 compiling issues
	* doc/plustek: fixed module compilation stuff and increase version number

2003-10-02  Peter Fales <peter@fales-lorenz.net>
	* backend/gphoto2.c backend/gphoto2.h: Try to handle the case where